[package]
name = "ffrenc"
edition = "2024"
version = "0.0.1"

[dependencies]
libffmpeg = { git = "https://github.com/charliethomson/libffmpeg" }
libsignal = { git = "https://github.com/charliethomson/libsignal" }

anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
serde_json = "1.0.145"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16" }
tracing = { version = "0.1.41", features = ["valuable"] }
valuable = { version = "0.1.1", features = ["derive"] }


[lints.clippy]
pedantic = { level = "warn", priority = 0 }
missing_errors_doc = { level = "allow", priority = 1 }
panic = { level = "warn", priority = 1 }
implicit_hasher = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_lossless = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
large_enum_variant = { level = "allow", priority = 1 }
result_large_err = { level = "allow", priority = 1 }
needless_pass_by_value = { level = "allow", priority = 1 }
large_futures = { level = "allow", priority = 1 }
match_same_arms = { level = "allow", priority = 1 }
